[gd_scene load_steps=2 format=2]

[ext_resource path="res://units/BaseUnit.gd" type="Script" id=1]

[node name="BaseUnit" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="ClickingArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickingArea"]
z_index = 1

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 4.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackCooldown" type="Timer" parent="."]
[connection signal="died" from="." to="." method="_on_self_died"]
[connection signal="health_changed" from="." to="." method="_on_self_health_changed"]
[connection signal="input_event" from="ClickingArea" to="." method="_on_ClickingArea_input_event"]
